<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/changeDateBtn"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:gravity="center"
        android:text="@string/changeDateBtn"
        android:textSize="12dp" />

	<TextView
	    android:id="@+id/workoutDateText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="@string/workoutDateText"
        android:padding="3dip" />
    </LinearLayout>
    
    
    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="2" >

    <TableRow>
        <TextView
            android:layout_column="1"
            android:text="@string/exerciseText"
            android:padding="3dip" />

	    <Spinner
	        android:layout_column="2"
	        android:id="@+id/spinner_chest"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="right"
	        android:gravity="right"
	        android:prompt="@string/exerciseSpinnerTitle" />

    </TableRow>

    <TableRow>
        <TextView
            android:layout_column="1"
            android:text="@string/weightText"
            android:padding="3dip" 
            android:layout_weight="0.5"/>

        <EditText
            android:id="@+id/chest_edit_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@android:drawable/editbox_background"
            android:inputType="number"
            android:maxLength="3" />

    </TableRow>

    <TableRow>
        <TextView
            android:layout_column="1"
            android:text="@string/repsText"
            android:padding="3dip" 
            android:layout_weight="0.5"/>
        
        <EditText android:id="@+id/chest_edit_reps" 
              android:layout_width="fill_parent" 
              android:layout_height="wrap_content" 
              android:background="@android:drawable/editbox_background"
              android:layout_weight="0.5"
              android:inputType="number"
              android:maxLength="10" />
    </TableRow>
    
    <TableRow>
        <TextView
            android:layout_column="1"
            android:text=""
            android:padding="3dip" 
            android:layout_weight="0.5"/>
        
    <Button
        android:id="@+id/chest_addBtn"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/addBtn"
        android:textSize="16dp"
        android:layout_weight="0.5" />    
    </TableRow>
    
	</TableLayout>
	
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    
    	<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content">
    
	  	    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			    android:orientation="vertical"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:id="@+id/chest_exercise_layout">
			   
	  	    </LinearLayout>
	  	    
	  	</ScrollView>
	  	
    </LinearLayout>
</LinearLayout>
