<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/changeDateBtn"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:gravity="center"
        android:text="@string/changeDateBtn"
        android:textSize="12dp" />

	<TextView
	    android:id="@+id/workoutDateText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="@string/workoutDateText"
        android:padding="3dip" />
    </LinearLayout>
    
    
    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <TableRow>
        <TextView
            android:layout_column="1"
            android:text="Exercise"
            android:padding="3dip"
            android:layout_weight="0.5" />
	    <Spinner 
	        android:id="@+id/spinner_back"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:prompt="@string/exerciseSpinnerTitle"
	        android:layout_weight="0.5"
	    />

    </TableRow>

    <TableRow>
        <TextView
            android:layout_column="1"
            android:text="Weight Lifted"
            android:padding="3dip" 
            android:layout_weight="0.5"/>
        <EditText android:id="@+id/edit_weight" 
              android:layout_width="fill_parent" 
              android:layout_height="wrap_content" 
              android:background="@android:drawable/editbox_background"
              android:layout_weight="0.5" />
    </TableRow>

    <TableRow>
        <TextView
            android:layout_column="1"
            android:text="Repititions"
            android:padding="3dip" 
            android:layout_weight="0.5"/>
        
        <EditText android:id="@+id/edit_reps" 
              android:layout_width="fill_parent" 
              android:layout_height="wrap_content" 
              android:background="@android:drawable/editbox_background"
              android:layout_weight="0.5" />
    </TableRow>
    
    <TableRow>
        <TextView
            android:layout_column="1"
            android:text=""
            android:padding="3dip" 
            android:layout_weight="0.5"/>
        
    <Button
        android:id="@+id/changeDateBtn2"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/addBtn"
        android:textSize="16dp" />    
    </TableRow>
	</TableLayout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
  <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello"
        android:textSize="30px" />
    </LinearLayout>
</LinearLayout>
